tests/baselines/reference/typeCheckingInsideFunctionExpressionInArray.errors.txt
==== tests/cases/compiler/typeCheckingInsideFunctionExpressionInArray.ts (4 errors) ====
    var functions = [function () {
      var k: string = 10;
          ~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'number' to 'string'.
        k = new Object();
        ~
!!! error TS2011: Cannot convert 'Object' to 'string'.
        [1, 2, 3].NonexistantMethod();
                  ~~~~~~~~~~~~~~~~~
!!! error TS2094: The property 'NonexistantMethod' does not exist on value of type 'number[]'.
        derp();
        ~~~~
!!! error TS2095: Could not find symbol 'derp'.
    }];
    